[gd_scene load_steps=5 format=2]

[ext_resource path="res://Start_room.gd" type="Script" id=1]
[ext_resource path="res://Start_UI/Setting.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sounds/background_music.ogg" type="AudioStream" id=3]
[ext_resource path="res://Sounds/firewatch-1920x1080-luchshie-igri-igra-kvest-ujasi-horror-pk-pc-ps4-9530.jpg" type="Texture" id=4]

[node name="Start_room" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -30.0
rect_min_size = Vector2( 200, 0 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 964.0
margin_bottom = 540.0

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer"]
margin_right = 760.0
margin_bottom = 540.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 764.0
margin_right = 964.0
margin_bottom = 540.0
rect_min_size = Vector2( 200, 0 )
custom_constants/separation = 10
alignment = 2

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 400.0
margin_right = 200.0
margin_bottom = 440.0
rect_min_size = Vector2( 0, 40 )
text = "Start"

[node name="Button2" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 450.0
margin_right = 200.0
margin_bottom = 490.0
rect_min_size = Vector2( 0, 40 )
text = "Seting"

[node name="Button3" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 500.0
margin_right = 200.0
margin_bottom = 540.0
rect_min_size = Vector2( 0, 40 )
text = "Exit"

[node name="Setting" parent="." instance=ExtResource( 2 )]
visible = false

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.341176, 0.32549, 0.32549, 0.584314 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="CanvasLayer"]
scroll_base_scale = Vector2( 0, 0 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
motion_mirroring = Vector2( 1024, 600 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/ParallaxBackground/ParallaxLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true

[connection signal="ResponsibleForDisplay" from="." to="Setting" method="_ResponsibleForDisplay" binds= [ true ]]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button" to="." method="_on_Button_pressed" binds= [ 0 ]]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button2" to="." method="_on_Button_pressed" binds= [ 1 ]]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button3" to="." method="_on_Button_pressed" binds= [ 2 ]]
[connection signal="Turning_Off_Visibility" from="Setting" to="." method="_on_Setting_Turning_Off_Visibility"]
